2006-06-26  Dave Brolley  <brolley@redhat.com>

	* common-xml/behavior.xml (profiling): New behavior documented.
	* common-xml/interface.xml (pins): Document gprof-pc, gprof-pc-hi
	and sample-gprof pins.

2006-06-23  Thiemo Seufer  <ths@mips.com>

	* tracedis.cxx (bfd_getb16, bfd_getl16, bfd_getb32, bfd_getl32):
	Remove invalid use of register specifier.

2006-06-20  Dave Brolley  <brolley@redhat.com>

	* compCGEN.cxx (cgen_bi_endian_cpu): Initialize loader. Add "loader"
	relation and "disassembly-symbol-address" pin.
	(cgen_print_address): Call cgen_symbol_at_address and print the
	symbol name.
	(cgen_symbol_at_address): Implemented.
	* cgen-cpu.h (class cgen_bi_endian_cpu): Add symbol_at_address,
	loader and disassembly_symbol_address_pin.

2006-06-14  Dave Brolley  <brolley@redhat.com>

	* cgen-fpu.h (cgen_fp_ops): All operations now take
	const cgen_fpu*.
	* cgen-fpu.cxx: Likewise.

2006-06-06  Frank Ch. Eigler  <fche@elastic.org>

	* Makefile.am, Makefile.in: Add "opcodes/cgen-bitset" to library.

2006-05-11  Dave Brolley  <brolley@redhat.com>

	* cgen-model.h (cgen_model): Initialize vliw_cycles.
	(model_insn_after): Correct comment re: last_p.
	* cgen-ops.h (SUBWORDDIHI, SUBWORDDIQI, SUBWORDDFDI): New functions.
	* compCGEN.cxx (cgen_bi_endian_cpu): Initialize branch_was_return.

2006-05-10  Dave Brolley  <brolley@redhat.com>

	* fp.cxx (fp::integer (long long&, round_mode_t)): New method.
	(fp::integer (unsigned long long&, round_mode_t)): New method.
	* fp.h: Likewise.
	* cgen-fpu.cxx (unorderedsf): New method.
	(adddf, subdf, muldf, divdf, negdf, absdf, sqrtdf): Implemented.
	(eqdf, ltdf, ledf, gtdf, gedf, gedf): Implemented.
	(unordereddf): New method.
	(unordereddf, fextsfdf): Implemented.
	(floatdisf, fixsfsi, fixsfdi, floatsidf, floatdidf, fixdfsi) 
	(fixdfdi): Implemented.
	* cgen-fpu.h: Likewise.
	* cgen-cpu.h (trace_counter): Now virtual.
	(SETMEMBI): Write to data memory
	(class cgen_bi_endian_cpu, class cgen_bi_endian_cpu) 