@@ -1,3 +1,8 @@
+2006-07-14  Dave Brolley  <brolley@redhat.com>
+
+	* CGEN.sh.in (fileopts): Place semantic switches first so that they
+	are processed first.
+
 2006-06-26  Dave Brolley  <brolley@redhat.com>
 
 	* common-xml/behavior.xml (profiling): New behavior documented.
